# qdio

./: .gitignore  docker-compose.yml
etc/: .gitignore  CMakeLists.txt  passwordUpdater.cpp
model/: Dockerfile  fixtures.sql  functions.sql  model.sql  reset.sh  schema.sql
src/: .gitignore  CMakeLists.txt  authDialog.cpp  authDialog.h  authDialog.ui  authManager.cpp  authManager.h  cartButton.cpp  cartButton.h  cartsWindow.cpp  cartsWindow.h  main.cpp  restRequest.cpp  restRequest.h  sessionManager.cpp  sessionManager.h  showDialog.cpp  showDialog.h  showDialog.ui
src/carts/: CMakeLists.txt  audioManager.cpp  audioManager.h  cartAudioManager.cpp  cartAudioManager.h  cartButton.cpp  cartButton.h  cartModel.cpp  cartModel.h  cartPageButton.cpp  cartPageButton.h  cartWall.cpp  cartWall.h  cartsWindow.cpp  cartsWindow.h  controlButton.cpp  controlButton.h
src/rest/: CMakeLists.txt  restRequest.cpp  restRequest.h
src/sessions/: CMakeLists.txt  authDialog.cpp  authDialog.h  authDialog.ui  sessionManager.cpp  sessionManager.h  settingsDialog.cpp  settingsDialog.h  settingsDialog.ui  showDialog.cpp  showDialog.h  showDialog.ui
www/: .gitignore  app.js  package-lock.json  package.json  test.sh
www/client/: Dockerfile  package-lock.json  package.json
www/client/public/: manifest.json
www/client/src/: App.jsx  App.tsx  AudioLibrary.tsx  Dashboard.css  Dashboard.jsx  Dashboard.tsx  Login.css  Login.jsx  Login.tsx  Overview.tsx
www/client/src/carts/: Cart.tsx  CartEditor.tsx  CartManagement.jsx  CartManagement.tsx  CartWallEditor.css  CartWallEditor.jsx  CartWallEditor.tsx  CartWallPicker.jsx  CartWallPicker.tsx
www/client/src/interfaces/: carts.ts
www/public/js/: userAuth.js
www/routes/: dashboard.js  index.js  userAuth.js
www/server/: .dockerignore  Dockerfile  app.js  package-lock.json  package.json
www/server/routes/: carts.js
www/server/src/: app.ts
www/server/src/public/stylesheets/: index.css
www/server/src/routes/: carts.ts  index.js  userAuth.ts
www/server/src/views/: dashboard-link.pug  home.pug
www/server/views/: dashboard.pug  index.pug  layout.pug
www/views/: layout.pug
